# bryder_autofs414

./: .gitignore  .version  CHANGELOG  COPYRIGHT  CREDITS  Makefile  Makefile.conf.in  Makefile.rules  README  README.bryder  README.changer  README.direct  README.gentoo  README.ghosting  README.init  README.ldap  README.ncpfs  README.options  README.patches  README.replicated-server  README.smbfs  aclocal.m4  autofs.spec  bryder_autofs.spec  configure.in
daemon/: Makefile  automount.c  module.c  mount.c  spawn.c
debian/: copy_in_built_files  deb_notes
debian/package_build/DEBIAN/: control
gentoo/net-fs/autofs/: autofs-4.1.4.ebuild  metadata.xml
gentoo/net-fs/autofs/files/: auto.home  auto.master  auto.misc  auto.net  auto.smb  autofs.conf  autofs.init
include/: automount.h  config.h.in  syslog.h
include/linux/: auto_fs.h  auto_fs4.h
lib/: Makefile  cache.c  cat_path.c  listmount.c  listmount.h  lock.c  mounts.c  nsswitch.c  rpc_subs.c  syslog.c  vsprintf.c
man/: Makefile  auto.master.5  autofs.5  autofs.8.in  automount.8
modules/: Makefile  lookup_file.c  lookup_hesiod.c  lookup_ldap.c  lookup_multi.c  lookup_nisplus.c  lookup_program.c  lookup_userhome.c  lookup_yp.c  mount_afs.c  mount_autofs.c  mount_bind.c  mount_changer.c  mount_ext2.c  mount_generic.c  mount_nfs.c  parse_hesiod.c  parse_sun.c
patches/: autofs4-2.2.17-20001023.diff  autofs4-2.4.18-20050404.patch  autofs4-2.4.19-20050404.patch  autofs4-2.4.20-20050404.patch  autofs4-2.4.20-redhat9-20050404.patch  autofs4-2.4.21-20050404.patch  autofs4-2.4.22-20050404.patch  autofs4-2.4.22-fc1-20050404.patch  autofs4-2.4.27-20050404.patch  autofs4-2.4.29-20050404.patch  autofs4-2.6.0-20050404.patch  autofs4-2.6.10-20050404.patch  autofs4-2.6.4-20050404.patch  autofs4-2.6.7-20050404.patch  autofs4-2.6.9-20050404.patch  util-linux-2.12a-flock.patch  util-linux-2.12q-flock.patch
redhat/: autofs.sysconfig
samples/: Makefile  auto.master  auto.master.ldap  auto.net  auto.smb  autofs-ldap-auto-master.c  ldap-automount-auto.direct  ldap-automount-auto.indirect  ldap-automount-auto.master  ldap-nis-auto.direct  ldap-nis-auto.indirect  ldap-nis-auto.master  rc.autofs.in
